syntax = "proto3";

package file;

option go_package = "filerpc/internal/proto;proto";

service FileService {
    rpc ReadFile (FileRequest) returns (FileResponse);
}

message FileRequest {
    string type = 1;
    string version = 2;
    string hash = 3;
}

message FileResponse {
    string type = 1;
    string version = 2;
    string hash = 3;
    bytes content = 4;
}
